--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egg-enums",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Enums for Egg.js",
   "eggPlugin": {
     "name": "enums"
@@ -36,7 +36,8 @@
   },
   "files": [
     "app.js",
-    "lib"
+    "lib",
+    "index.d.ts"
   ],
   "ci": {
     "version": "8, 9"
